Incluindo slides da apresentção do Prof. Aléssio

--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
                                                     Slides:
                                                     <ul style="list-style-type:disc;">
                                                         <li> 
-                                                            Aplicativo Preço da Hora: tecnologias para extração de conhecimento de Big Data by <a href="https://www.linkedin.com/in/alessio-almeida-24b25282/" target="_blank">Aléssio Tony</a>;
+                                                            <a href="outros/materia_divulgação/7oMeetup/slides/SlidesPalestraAlessioAlmeida7oMeetup.pdf" target="_blank">
+                                                            Aplicativo Preço da Hora: tecnologias para extração de conhecimento de Big Data
+                                                            </a> by <a href="https://www.linkedin.com/in/alessio-almeida-24b25282/" target="_blank">Aléssio Tony</a>;
                                                         </li>
                                                         <li> 
                                                             <a href="https://www.slideshare.net/aeciopires/integrao-contnua-com-jenkins-158193969" target="_blank">
