Adicionando inscrição do meetup n. 8

--- a/index.html
+++ b/index.html
@@ -196,7 +196,31 @@
                                             <script type="IN/Share" data-url="https://youtu.be/KN7q2KIEtXY"></script>
                                         </h2>
                                         <p>
-                                            Mais detalhes: ...
+                                            Mais detalhes: 
+                                            <ul style="list-style-type:disc;">
+                                                <li> 
+                                                    <a href="http://bit.ly/Grude4JMeetup8" target="_blank">Inscrição para o 8o Meetup</a>;
+                                                </li>
+                                                <li> 
+                                                    <a href="outros/materia_divulgação/8oMeetup/8oMeetupDaComunidaGrude4J_fly_1080x1080.jpg" target="_blank">Fly do 8o Meetup Grude4J</a>;
+                                                </li>
+                                                <li> 
+                                                    <a href="outros/materia_divulgação/8oMeetup/8oMeetupDaComunidaGrude4J_fly_1080x1080_palestrantes.jpg" target="_blank">Sobre os palestrantes</a>;
+                                                </li>
+                                                <li> 
+                                                    Slides:
+                                                    <ul style="list-style-type:disc;">
+                                                        <li> 
+                                                            BDD em Java - Integrando Requisitos, Testes e Desenvolvimento
+                                                            by <a href="https://www.linkedin.com/in/achiles-pedro-msc-ctfl-071b1026/" target="_blank">Achiles Luciano</a>;
+                                                        </li>
+                                                        <li> 
+                                                            Introdução ao GraphQL com Spring Boot
+                                                            by <a href="https://www.linkedin.com/in/carlosemanuel/" target="_blank">Carlos Emanuel</a>;
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
                                         </p>
                                         <div class="post-pre-bottom">
                                             Patrocinadores: <br>    
