slides de Achiles

--- a/index.html
+++ b/index.html
@@ -210,8 +210,15 @@
                                                 <li> 
                                                     Slides:
                                                     <ul style="list-style-type:disc;">
-                                                        <li> 
-                                                            BDD em Java - Integrando Requisitos, Testes e Desenvolvimento
+                                                        <li>
+                                                            <a href="outros/materia_divulgação/8oMeetup/slides/ApresentaccaoBDDGrude4J.pdf" target="_blank"> 
+                                                                BDD em Java - Integrando Requisitos, Testes e Desenvolvimento
+                                                            </a>
+                                                            (
+                                                            <a href="https://github.com/achilespcl" target="_blank"> 
+                                                                github
+                                                            </a> 
+                                                            )
                                                             by <a href="https://www.linkedin.com/in/achiles-pedro-msc-ctfl-071b1026/" target="_blank">Achiles Luciano</a>;
                                                         </li>
                                                         <li> 
