link para o linkedin corrigido

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                                         <h2 class="post-title bold">
                                             Vem aí o 9o Meetup Grude4J! Aguardem!
                                             <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-                                            <script type="IN/Share" data-url="https://www.youtube.com/watch?v=NVsc1r0Ibdw"></script>
+                                            <script type="IN/Share" data-url="https://grude4j.github.io/grude4jsite/outros/materia_divulgação/9oMeetup/Chamada/Chamda9oMeetup.jpg"></script>
                                         </h2>
                                         <div class="post-pre-bottom">
                                             Patrocinadores: <br>    
