Publicando URL para inscrição no 9o meetup

--- a/index.html
+++ b/index.html
@@ -195,6 +195,27 @@
                                             <h2 class="post-title bold">
                                                 Vem aí o 9o Meetup Grude4J! Aguardem!
                                             </h2>
+                                            <p>
+                                                Mais detalhes: 
+                                                <ul style="list-style-type:disc;">
+                                                    <li> 
+                                                        <a href="http://bit.ly/Grude4JMeetup9" target="_blank">Inscrição para o 9o Meetup</a>;
+                                                    </li>
+                                                    <li> 
+                                                        Slides:
+                                                        <ul style="list-style-type:disc;">
+                                                            <li>
+                                                                Desmistificando o IoC Container do Spring Boot
+                                                                by <a href="https://www.linkedin.com/in/flauber/" target="_blank">Flaviano Flauber</a>;
+                                                            </li>
+                                                            <li> 
+                                                                Introdução ao GraphQL com Spring Boot
+                                                                by <a href="https://www.linkedin.com/in/gregoriomelo/" target="_blank">Gregório Melo</a>;
+                                                            </li>
+                                                        </ul>
+                                                    </li>
+                                                </ul>
+                                            </p>
                                             <div class="post-pre-bottom">
                                                 Patrocinadores: <br>    
                                                 <a href="https://grude4j.github.io/grude4jsite/" 
