--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <p>A dinâmica da comunidade é a experimentação, ir além do formato tradicional  
                             de ter duas palestras por meetup, etc, para ver o que faz a turma continuar se reunindo. 
                         </p>
-                        <p>É ir errando juntos tentando acertar e vê o que aprendemos no final, de preferência rindo muito rsrs</p>
+                        <p>É ir errando juntos tentando acertar e vê o que aprendemos no caminho, de preferência rindo muito rsrs</p>
                     </div>
                     <div class="col-sm-4   visivelApenasTelasGrandes" data--duration="500ms" data--delay="300ms">
                             <img src="images/experimentacao.jpg" class="img-responsive" alt="">
