correção do título da palestra do 9o meetup

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                                             </li>
                                                             <li>
                                                                 <a href="outros/materia_divulgação/9oMeetup/slides/JavaEProgramacaoFuncional.pdf" target="_blank">  
-                                                                    Introdução ao GraphQL com Spring Boot
+                                                                    Java & Programação Funcional
                                                                 </a>
                                                                 by <a href="https://www.linkedin.com/in/gregoriomelo/" target="_blank">Gregório Melo</a>;
                                                             </li>
