--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                                                         <a href="http://bit.ly/Grude4JMeetup9" target="_blank">Inscrição para o 9o Meetup</a>;
                                                     </li>
                                                     <li> 
-                                                        <a href="outros/materia_divulgação/9oMeetup/flyer_9o_meetup.jpg" target="_blank">Flyer do 9o Meetup Grude4J</a>.
+                                                        <a href="outros/materia_divulgação/9oMeetup/flyer_9o_meetup.jpg" target="_blank">Flyer do 9o Meetup Grude4J</a>;
                                                     </li>
                                                     <li> 
                                                         Slides:
