atualizando a seção membros, agora existe apenas uma indicação onde localiza-los

--- a/index.html
+++ b/index.html
@@ -1030,8 +1030,6 @@
                             <div class="action">
                                 <div class="col-sm-12">
                                     <h1 class="title">Membros</h1>
-                                    <strong class="title">Lista dos <B>Desenvolvedores Java</B> membros da Grude4j, incluindo contato</strong><BR>
-                                    Alguma informação faltando ou incorreta? Informe-nos via seção Contato.
                                 </div>
                             </div>
                         </div>
@@ -1045,9 +1043,9 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <input type="text" id="filtraElemento" onkeyup="filtraMembros()" placeholder="Filtrar por nome.." title="Digite um nome">
-                                <div id="membrosContainer" class="team-images-row row">
-                                </div>
+                                <p>Os membros da comunidade podem ser encontrados no canal #java do Slack do GrudePB ou 
+                                seguindo nosso instagram <a href="https://www.instagram.com/grude4joficial/" target="_blank">@grude4joficial</a>.</p>
+                                <p>Mantemos também uma lista de distribuição com o e-mail de todos que já participaram de alguma ativadade da comunidade, para eventual comunicação com todos.</p>
                             </div>
                         </div>
                     </div>
