atualizando link para instruções sobre como fazer parte da comunidade

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <div class="col-sm-6  " data--duration="500ms" data--delay="300ms">
                             <h2>Comunicações</h2>
                             <p>O nosso principal hub de comunicação é o canal #java no Slack do GrudePB - Grupo de Desenvolvedores da Paraíba.</p>                        
-                            <p>Saiba como fazer parte do GrudePB nesse link: <a href="http://grudepb.info/" target="_blank">
-                                <strong>http://grudepb.info/</strong></a>. <b>Após entrar no slack do GrudePB, entre no canal #java.</b></p> 
+                            <p>Como fazer parte? Siga as instruções contidas nesse <a href="https://www.instagram.com/p/B7jOUjnpVj0/?utm_source=ig_web_copy_link" target="_blank">
+                                <strong>post no nosso instagram</strong></a>.
                             
 
                         </div>
