adicionando página fundadores

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <div class="col-sm-12 text-center">
                             <a href="#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Home        </a>
                             <a href="#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Sobre       </a>
+                            <a href="fundadores.html"                                                style = "white-space:PRE">  Fundadores  </a>
                             <a href="#eventosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Eventos     </a>
                             <a href="#membrosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Membros     </a>
                             <a href="#mercadoSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Mercado     </a>
@@ -144,7 +145,7 @@
                         <div class="col-sm-4   visivelApenasTelasGrandes" data--duration="500ms" data--delay="300ms">
                                 <img src="images/experimentacao.jpg" class="img-responsive" alt="">
                         </div>
-                    </div>    
+                    </div>                    
                 </div>
             </div>
         </section>
