transformando seções em páginas web

--- a/fundadores.html
+++ b/fundadores.html
@@ -49,14 +49,14 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 text-center">
-                            <a href="index.html#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Home        </a>
-                            <a href="index.html#sobreSecao"       onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Sobre       </a>
+                            <a href="index.html"                                                     style = "white-space:PRE">  Home        </a>
+                            <a href="index.html"                                                     style = "white-space:PRE">  Sobre       </a>
                             <a href="fundadores.html"                                                style = "white-space:PRE">  Fundadores  </a>
-                            <a href="index.html#eventosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Eventos     </a>
-                            <a href="index.html#membrosSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Membros     </a>
-                            <a href="index.html#mercadoSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Mercado     </a>
-                            <a href="index.html#iniciativasSecao" onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Iniciativas </a>
-                            <a href="index.html#contatoSecao"     onclick="clickLink(this.href);return false;" style = "white-space:PRE">  Contato     </a>
+                            <a href="eventos.html"                                                   style = "white-space:PRE">  Eventos     </a>
+                            <a href="membros.html"                                                   style = "white-space:PRE">  Membros     </a>
+                            <a href="mercado.html"                                                   style = "white-space:PRE">  Mercado     </a>
+                            <a href="iniciativas.html"                                               style = "white-space:PRE">  Iniciativas </a>
+                            <a href="contato.html"                                                   style = "white-space:PRE">  Contato     </a>
                         </div>
                     </div>
                 </A>
@@ -66,7 +66,22 @@
 
     <!-- conteudo geral -->
     <div id="conteudo" class="container conteudo">
-        <!-- seção 'Sobre' -->
+        <!-- seção 'Fundadores' -->
+        <section id="page-breadcrumb">
+            <div class="vertical-center">
+                    <div class="container">
+                    <div id="membrosSecao" name="membrosSecao">
+                        <div class="row">
+                            <div class="action">
+                                <div class="col-sm-12">
+                                    <h1 class="title">Fundadores</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section id="features">
             <div class="container">
                 <div class="row">
