--- a/eventos.html
+++ b/eventos.html
@@ -49,14 +49,14 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-12 text-center">
-                            <a href="index.html"                                                     style = "white-space:PRE">  Home        </a>
-                            <a href="index.html"                                                     style = "white-space:PRE">  Sobre       </a>
-                            <a href="fundadores.html"                                                style = "white-space:PRE">  Fundadores  </a>
-                            <a href="eventos.html"                                                   style = "white-space:PRE">  Eventos     </a>
-                            <a href="membros.html"                                                   style = "white-space:PRE">  Membros     </a>
-                            <a href="mercado.html"                                                   style = "white-space:PRE">  Mercado     </a>
-                            <a href="iniciativas.html"                                               style = "white-space:PRE">  Iniciativas </a>
-                            <a href="contato.html"                                                   style = "white-space:PRE">  Contato     </a>
+                            <a href="index.html"                                                     style = "white-space:PRE">  Home / Sobre </a>
+                            <a href="fundadores.html"                                                style = "white-space:PRE">  Fundadores   </a>
+                            <a href="eventos.html"                                                   style = "white-space:PRE">  Eventos      </a>
+                            <a href="membros.html"                                                   style = "white-space:PRE">  Membros      </a>
+                            <a href="mercado.html"                                                   style = "white-space:PRE">  Mercado      </a>
+                            <a href="iniciativas.html"                                               style = "white-space:PRE">  Iniciativas  </a>
+                            <a href="parcerias.html"                                                 style = "white-space:PRE">  Parcerias    </a>
+                            <a href="contato.html"                                                   style = "white-space:PRE">  Contato      </a>
                         </div>
                     </div>
                 </A>
