--- a/parcerias.html
+++ b/parcerias.html
@@ -65,45 +65,60 @@
     </nav>
 
     <!-- conteudo geral -->
-    <div id="conteudo" class="container conteudo">
-        <!-- seção 'Mercado' -->
+    <div id="conteudo" class="container conteudo">        
+        <!-- contato -->
         <section id="page-breadcrumb">
             <div class="vertical-center">
-                    <div class="container">
-                    <div id="mercadoSecao" name="mercadoSecao">
+                <div class="container">
+                    <A id="contatoSecao" name="contatoSecao">
                         <div class="row">
                             <div class="action">
                                 <div class="col-sm-12">
-                                    <h1 class="title">Mercado</h1>
-                                    <strong class="title">Lista de participantes do ecosistema <B>Java</B> de João Pessoa</strong><BR>
-                                    Sentiu falta de alguma empresa? Informe-nos via opção "Sugerir novos participantes no ecosistema".
+                                    <h1 class="title">Parcerias</h1>
+                                    <strong class="title">O ecossistema Java é composto de muito gente boa, disposta a faze-lo fica cada vez melhor ainda.<BR>
+                                        Abaixo listamos alguns parceiros que ajudam a comunidade a fazer cada vez mais.
                                 </div>
                             </div>
+                        </div>
+                    </A>
+                </div>
+            </div>
+        </section>
+
+        <!-- conteudo geral -->
+        <section id="features">
+            <div class="container">
+                <div class="row">
+                          
+                    <div class="single-features">
+                        <div class="col-sm-4   visivelApenasTelasPequenas" data--duration="500ms" data--delay="300ms">
+                            <img src="images/jetbrains-variant-2.png" style="display: block;
+                                margin-left: auto;
+                                margin-right: auto;
+                                width: 100%;
+                                max-width: 300px" alt="logo"  class="img-responsive" >  
+                        </div>
+                        <div class="col-sm-7 col-sm-offset-1 align-right  " data--duration="500ms" data--delay="300ms">
+                            <h2><a href="https://www.jetbrains.com/" target="_blank">Jetbrains</a></h2>
+                            <p>A Jetbrains é muito conhecida entre Javeiros por fornecer uma IDE de alta qualidade gratuita (versão community), o <a href="https://www.jetbrains.com/idea/" target="_blank">Jetbrains IntelliJ IDEA</a>. Ela ajuda a comunidade Grude4J e outras comunidades fornecendo licenças de 1 ano para a versões pagas de suas IDEs para serem sorteadas entre os membros da comunidade, através de seu programa <a href="https://www.jetbrains.com/community/user-groups/" target="_blank">Free License Programs</a>.
+                            </p>
+                        </div>
+                        <div class="col-sm-4   visivelApenasTelasGrandes" data--duration="500ms" data--delay="300ms">
+                            <img src="images/jetbrains-variant-2.png" style="display: block;
+                                margin-left: auto;
+                                margin-right: auto;
+                                width: 100%;
+                                max-width: 300px" alt="logo"  class="img-responsive" >  
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <div id="container">
-            <div class="row">
-                <div class="single-features" style="padding-top: 0;padding-bottom: 0;">
-                    <div class="col-sm-2  " data--duration="500ms" data--delay="300ms">
-                    </div>
-                    <div class="col-sm-8 offset-sm-2">
-                        <iframe width="100%" height="720px" src="https://flauberjp.github.io/ecossistema-dist/?caracteristicas=java,cursos ensinando java&ecosistemas=Empresas de TI de João Pessoa&menuVisivel=true"></iframe> 
-                    </div>
-                    <div class="col-sm-2  " data--duration="500ms" data--delay="300ms">
-                    </div>
-                </div>
-            </div>
-        </div>
-
+        
         <!-- footer -->
         <footer id="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 text-center bottom-separator">
-                    </div>
                     <div class="col-sm-12">
                         <div class="copyright-text text-center"> 
                             <p>Adaptação do <a target="_blank" href="https://themehunt.com/item/1524992-triangle-free-responsive-creative-template"> <i>Triangle</i> template</a> desenhado por <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
