--- a/parcerias.html
+++ b/parcerias.html
@@ -75,7 +75,7 @@
                             <div class="action">
                                 <div class="col-sm-12">
                                     <h1 class="title">Parcerias</h1>
-                                    <strong class="title">O ecossistema Java é composto de muito gente boa, disposta a faze-lo fica cada vez melhor ainda.<BR>
+                                    <strong class="title">O ecossistema Java é composto de muito gente boa, disposta a faze-lo ficar cada vez melhor ainda.<BR>
                                         Abaixo listamos alguns parceiros que ajudam a comunidade a fazer cada vez mais.
                                 </div>
                             </div>
