atualizando principal meio de comunicacao

--- a/index.html
+++ b/index.html
@@ -175,16 +175,10 @@
                             <img src="images/canalJava.png" class="img-responsive" alt="">
                         </div>
 
-                        <div class="col-sm-6  " data--duration="500ms" data--delay="300ms">
-                            <h2>Comunicações</h2>
-                            <p>O nosso principal hub de comunicação é o canal #java no Slack do GrudePB - Grupo de
-                                Desenvolvedores da Paraíba.</p>
-                            <p>Como fazer parte? Siga as instruções contidas nesse <a
-                                    href="https://www.instagram.com/p/B7jOUjnpVj0/?utm_source=ig_web_copy_link"
-                                    target="_blank">
-                                    <strong>post no nosso instagram</strong></a>.
-
-
+                        <div class="col-sm-6  " data--duration="500ms" data--delay="300ms">							
+							<h2>Comunicações</h2>
+                            <p>O nosso principal hub de comunicação é o grupo da comunidade no WhatsApp.</p>
+                            <p>Como fazer parte? É só entrar através desse convite do WhatsApp: <a href="https://chat.whatsapp.com/DQX9T2rAsI8FBwdOOkuahD" target="_blank"> <strong> Grupo da Comunidade</strong></a>.
                         </div>
                     </div>
                     <div class="single-features">
