atualizando info sobre membros

--- a/membros.html
+++ b/membros.html
@@ -138,7 +138,8 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-12">
-                                <p>Os membros da comunidade podem ser encontrados no canal #java do Slack do GrudePB ou
+                                <p>Os membros da comunidade podem ser encontrados no 
+								<a href="https://chat.whatsapp.com/DQX9T2rAsI8FBwdOOkuahD" target="_blank"> grupo da comunidade no WhatsApp</a> ou
                                     seguindo nosso instagram <a href="https://www.instagram.com/grude4joficial/"
                                         target="_blank">@grude4joficial</a>.</p>
                                 <p>Mantemos também uma lista de distribuição com o e-mail de todos que já participaram
